samples/_failures_safe/1761040417_aa5f0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfeaee01.c: In function ‘main’:
./samples/SAFE/__tmp_dfeaee01.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
